[gd_scene load_steps=6 format=3 uid="uid://dfwgvi5kn4ifi"]

[ext_resource type="Script" path="res://Scripts/SST_Task_Manager.gd" id="1_hrvas"]
[ext_resource type="PackedScene" uid="uid://n7shkduekcq2" path="res://SubScenes/Player.tscn" id="2_a7xoq"]
[ext_resource type="PackedScene" uid="uid://cdt6315of2aeu" path="res://SubScenes/Ball_Feeder.tscn" id="2_rgtr6"]
[ext_resource type="PackedScene" uid="uid://ca41om8xqbbts" path="res://SubScenes/Defender.tscn" id="3_t0scl"]
[ext_resource type="PackedScene" uid="uid://cm3ee373qph5v" path="res://SubScenes/Teammate.tscn" id="4_pxf4c"]

[node name="SST_Task_Manager" type="Node3D"]
script = ExtResource("1_hrvas")
blocks = Array[int]([1, 0])
ball_kick_magnitude = 8.0

[node name="Player" parent="." instance=ExtResource("2_a7xoq")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="PlaceholderBallFeederLeft" type="Node3D" parent="."]
transform = Transform3D(-0.630744, 0, 0.775991, 0, 1, 0, -0.775991, 0, -0.630744, -8.0147, 0, 5.53492)

[node name="BallFeeder" parent="PlaceholderBallFeederLeft" instance=ExtResource("2_rgtr6")]
_left_feeder = true

[node name="PlaceholderBallFeederRight" type="Node3D" parent="."]
transform = Transform3D(0.644257, 0, 0.764809, 0, 1, 0, -0.764809, 0, 0.644257, -8.015, 0, -5.535)

[node name="BallFeeder" parent="PlaceholderBallFeederRight" instance=ExtResource("2_rgtr6")]

[node name="PlaceholderDefenderLeft" type="Node3D" parent="."]
transform = Transform3D(-0.721953, 0, 0.691942, 0, 1, 0, -0.691942, 0, -0.721953, -10.88, 0, 4)

[node name="Defender" parent="PlaceholderDefenderLeft" instance=ExtResource("3_t0scl")]

[node name="PlaceholderDefenderRight" type="Node3D" parent="."]
transform = Transform3D(0.53227, 0, 0.846574, 0, 1, 0, -0.846574, 0, 0.53227, -10.88, 0, -4)

[node name="Defender" parent="PlaceholderDefenderRight" instance=ExtResource("3_t0scl")]

[node name="PlaceholderFixation" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9, 0, 0)

[node name="Teammate" parent="PlaceholderFixation" instance=ExtResource("4_pxf4c")]

[node name="DefenderCenter" parent="." instance=ExtResource("3_t0scl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15)

[node name="DefenderGK" parent="." instance=ExtResource("3_t0scl")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -35, 0, 0)
